# travel-agui

./: .gitignore  AGENT.md  COMMUNICATION_FLOW.md  README.md  package-lock.json  package.json  pyrightconfig.json  start.py  start.sh  stop.sh
backend/: .env.example  a2a_server.py  agent.py  context_extractor.py  converter.py  domain_runtime.py  executor.py  main.py  models.py  pyproject.toml  requirements.txt
backend/data/: __init__.py  flights.py  hotels.py  preferences.py  tips.py
backend/domains/: __init__.py  base.py
backend/domains/fake/: __init__.py  plugin.py
backend/domains/travel/: __init__.py  agent.py  context.py  plugin.py  state.py  state_manager.py
backend/domains/travel/data/: __init__.py  flights.py  preferences.py
backend/domains/travel/knowledge/: __init__.py  graph.py  index.py  neo4j_loader.py  (+2 more)
backend/state/: __init__.py  context_builder.py  manager.py  models.py  store.py
backend/tests/: conftest.py  test_a2a_stream.py  test_agui_run.py  test_compatibility_cleanup.py  test_domain_runtime.py  test_executor.py  test_fake_plugin_smoke.py  test_health.py
backend/tests/state/: test_context_builder.py  test_manager.py  test_models.py
backend/tests/state-panel-sidebar/: test_context_extraction.py  test_main_state_handling.py  test_snapshot_emission.py
backend/tests/travel/: test_graph_query_tools.py  test_hotel_tools.py  test_knowledge_graph.py  test_knowledge_tool.py  test_neo4j_loader.py  test_neo4j_repository.py
backend/tools/: __init__.py  favorite_tools.py  flight_tools.py  hotel_tools.py  input_tools.py  tips_tools.py
(+92 files in other folders)
