[project]
name = "travel-agui-backend"
version = "1.0.0"
description = "Travel AI A2A backend server"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.0.0",
    "a2a-sdk>=0.2.0",
    "ag-ui-protocol>=0.1.14",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "neo4j>=5.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".venv/*"]
